outsourcing in FrontendController Class