@@ -5,9 +5,14 @@ import com.sina_reidenbach.InsurancePremium.model.City;
 import com.sina_reidenbach.InsurancePremium.model.Postcode;
 import com.sina_reidenbach.InsurancePremium.model.Region;
 import com.sina_reidenbach.InsurancePremium.model.Vehicle;
-import com.sina_reidenbach.InsurancePremium.repository.*;
+import com.sina_reidenbach.InsurancePremium.repository.CityRepository;
+import com.sina_reidenbach.InsurancePremium.repository.PostcodeRepository;
+import com.sina_reidenbach.InsurancePremium.repository.RegionRepository;
+import com.sina_reidenbach.InsurancePremium.repository.VehicleRepository;
 import com.sina_reidenbach.InsurancePremium.service.CalculateService;
+import com.sina_reidenbach.InsurancePremium.service.LocationService;
 import com.sina_reidenbach.InsurancePremium.service.StatisticsService;
+import com.sina_reidenbach.InsurancePremium.service.VehicleService;
 import jakarta.servlet.http.HttpServletRequest;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -15,18 +20,18 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.springframework.http.MediaType;
+import org.springframework.test.util.ReflectionTestUtils;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.ui.Model;
-
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.Optional;
 import java.util.List;
-
-import java.util.*;
-
-
 import static org.hamcrest.Matchers.containsString;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
@@ -53,56 +58,66 @@ public class FrontendControllerTest {
     @Mock
     private StatisticsService statisticsService;
 
-    @InjectMocks
-    private FrontendController frontendController;
+    @Mock
+    private LocationService locationService;
+
+    @Mock
+    private VehicleService vehicleService;
+
     @Mock
     private HttpServletRequest request;
+
     @Mock
     private Model model;
+
     @Mock
     private Vehicle vehicle;
+
     @Mock
     private City city;
+
     @Mock
     private Region region;
+
     @Mock
     private Postcode postcode;
+
+    @InjectMocks
+    private FrontendController frontendController;
 
     private final String validPostcode = "12345";
     private final Long vehicleId = 1L;
     private final int km = 1000;
 
-
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
+        ReflectionTestUtils.setField(frontendController, "locationService", locationService);
+        ReflectionTestUtils.setField(frontendController, "vehicleService", vehicleService);
         mockMvc = MockMvcBuilders.standaloneSetup(frontendController).build();
     }
 
     @Test
     void testBerechnen_WithValidData() {
-
-        // Arrange
-        when(postcodeRepository.findFirstByPostcodeValue(validPostcode)).thenReturn(Optional.of(postcode));
+        when(locationService.findPostcode(validPostcode)).thenReturn(Optional.of(postcode));
         when(cityRepository.findByPostcodes_PostcodeValue(validPostcode)).thenReturn(city);
+        when(locationService.findCityByPostcode(validPostcode)).thenReturn(Optional.of(new City("DummyCity")));
         when(regionRepository.findByCities_Name(city.getName())).thenReturn(region);
-        when(region.getName()).thenReturn("Baden-Württemberg"); // Sicherstellen, dass getName() nicht null ist
+        when(locationService.findRegionByCityName("DummyCity")).thenReturn(Optional.of(new Region("Baden-Württemberg", 1.0)));
+        when(region.getName()).thenReturn("Baden-Württemberg");
         when(vehicleRepository.findById(vehicleId)).thenReturn(Optional.of(vehicle));
-        when(vehicle.getName()).thenReturn("SUV"); // Fahrzeugname setzen
+        when(vehicle.getName()).thenReturn("SUV");
         when(calculateService.calculatePremium(km, km, vehicleId, validPostcode)).thenReturn(500.0);
-        when(vehicleRepository.findAll()).thenReturn(new ArrayList<>(List.of(vehicle)));
+        when(vehicleService.getSortedVehicleList()).thenReturn(new ArrayList<>(List.of(vehicle)));
+        when(locationService.filterPostcodesByInput(anyString())).thenReturn(Collections.emptyList());
 
-
-        // Act
         String result = frontendController.berechnen(km, validPostcode, vehicleId, request, model);
 
-        // Assert
         assertEquals("index", result);
         verify(model).addAttribute("premium", "500,00 €");
         verify(model).addAttribute("region", "Baden-Württemberg");
         verify(model).addAttribute("vehicleList", List.of(vehicle));
     }
-
 
     @Test
     void testBerechnen_withMissingParameters_returnsErrorPage() throws Exception {
@@ -121,7 +136,7 @@ public class FrontendControllerTest {
         Postcode postcode2 = new Postcode();
         postcode2.setPostcodeValue("70174");
 
-        when(postcodeRepository.findAll()).thenReturn(Arrays.asList(postcode1, postcode2));
+        when(locationService.filterPostcodesByInput("7017")).thenReturn(Arrays.asList(postcode1, postcode2));
 
         mockMvc.perform(get("/filter-postcodes")
                         .param("input", "7017"))
@@ -132,15 +147,13 @@ public class FrontendControllerTest {
 
     @Test
     void testFilterPostcodes_withNoMatchingInput_returnsEmptyOptions() throws Exception {
-        when(postcodeRepository.findAll()).thenReturn(Collections.emptyList());
+        when(locationService.filterPostcodesByInput("9999")).thenReturn(Collections.emptyList());
 
         mockMvc.perform(get("/filter-postcodes")
                         .param("input", "9999"))
                 .andExpect(status().isOk())
                 .andExpect(content().string("<option value=\"\">Keine Postleitzahlen gefunden</option>"));
     }
-
-
 
     @Test
     void testShowHomePage_withNoInput_displaysIndexWithLists() throws Exception {
